--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -255,11 +255,11 @@ body.ingame #vertbuttonshome {
   flex: 1;
   margin: 0 10px; }
 
-.titlebanner {
+.titlearea {
   margin: 10px 10px 20px 10px;
   color: rgba(var(--tricol), 1); }
 
-.subtitlebanner {
+.subtitlearea {
   margin: 10px 10px 20px 10px;
   color: rgba(var(--tricol), 0.6); }
 
@@ -924,33 +924,33 @@ body.mymove #boardarea #yourmoveslider {
 #cookiebg-parent.done #cookiebg {
   opacity: 0; }
 
-#cookiebanner-parent {
+#cookiearea-parent {
   margin: auto;
   max-width: 630px;
   width: 100%; }
 
-#cookiebanner {
+#cookiearea {
   margin: 0 15px;
   color: white;
   background: linear-gradient(180deg, #2f3c31 0%, #272c28 80%);
   padding: 60px;
   border: rgba(var(--tricol), 0.4) 1px solid; }
 
-#cookiebanner h2 {
+#cookiearea h2 {
   text-align: center; }
 
-#cookiebanner p {
+#cookiearea p {
   padding: 5px 0;
   margin: 8px auto;
   width: fit-content; }
 
-#cookiebanner p:hover {
+#cookiearea p:hover {
   cursor: pointer; }
 
-#cookiebanner p span {
+#cookiearea p span {
   opacity: 0.3; }
 
-#cookiebanner p:hover span {
+#cookiearea p:hover span {
   opacity: 1; }
 
 .cookies-table-container {
